--- a/index.html
+++ b/index.html
@@ -1,86 +1,124 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Victoria Gurova - CV</title>
-    <style>
-        /* ID: Unique styling for the main CV card */
-        #cv-card {
-            max-width: 800px;
-            margin: 50px auto;
-            background: white;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            font-family: sans-serif;
-            border-top: 8px solid #1a2a6c;
-        }
+  <meta charset="utf-8">
+  <title>Victoria Gurova - Resume</title>
 
-        /* ID: Unique styling for the header */
-        #main-header {
-            text-align: center;
-            border-bottom: 2px solid #f0f0f0;
-            padding-bottom: 20px;
-            margin-bottom: 30px;
-        }
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 30px;
+      line-height: 1.5;
+    }
 
-        /* CLASS: Reusable styling for section titles */
-        .section-title {
-            color: #1a2a6c;
-            text-transform: uppercase;
-            margin-top: 30px;
-            border-left: 4px solid #fdbb2d;
-            padding-left: 15px;
-        }
+    h1, h2 {
+      font-weight: bold;
+    }
 
-        /* CLASS: Reusable styling for skill bubbles */
-        .skill-badge {
-            display: inline-block;
-            background: #eef2f7;
-            color: #1a2a6c;
-            padding: 6px 15px;
-            border-radius: 20px;
-            margin: 5px 2px;
-            font-size: 0.9rem;
-            font-weight: 600;
-        }
+    p {
+      margin: 6px 0;
+    }
 
-        body { background-color: #f4f7f6; margin: 0; }
-        ul { line-height: 1.6; }
-    </style>
+    ul {
+      margin-top: 6px;
+      margin-bottom: 14px;
+    }
+
+    li {
+      margin-bottom: 4px;
+    }
+
+    hr {
+      border: none;
+      border-top: 1px solid white;
+      margin: 20px 0;
+    }
+
+    a {
+      color: white;
+      text-decoration: underline;
+    }
+
+    .small {
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
 
-    <div id="cv-card">
-        <header id="main-header">
-            <h1>Victoria Gurova</h1>
-            <p>Creator Support Specialist | Digital Collaboration Expert</p>
-        </header>
+  <h1><b>Victoria Gurova</b></h1>
+  <p class="small">
+    <b>Email:</b>
+    <a href="mailto:victoria.p.gurova@gmail.com">victoria.p.gurova@gmail.com</a>
+  </p>
 
-        <h2 class="section-title">Technical Skills</h2>
-        <div>
-            <span class="skill-badge">Intercom</span>
-            <span class="skill-badge">Notion</span>
-            <span class="skill-badge">VBA/Macros</span>
-            <span class="skill-badge">English (C1)</span>
-        </div>
+  <hr>
 
-        <h2 class="section-title">Experience</h2>
-        <p><strong>vidIQ Inc.</strong> (2022–Present)<br><em>Creator Support Specialist</em></p>
-        <ul>
-            <li>Resolve technical issues for YouTube creators via chat/email.</li>
-            <li>Created Notion guides for team onboarding.</li>
-        </ul>
+  <h2><b>SUMMARY</b></h2>
+  <p>
+    Solutions-oriented Support Specialist with a background in digital collaboration and administrative optimization.
+    Expert in assisting stakeholders at global companies like vidIQ and Boeing through creative problem-solving and technical proficiency.
+  </p>
 
-        <p><strong>Boeing Aviation Training</strong> (2020–2021)<br><em>Support Administrator</em></p>
-        <ul>
-            <li>Digitized 80% of paper databases using VBA macros.</li>
-            <li>Coordinated pilot schedules and IT support.</li>
-        </ul>
+  <hr>
 
-        <h2 class="section-title">Education</h2>
-        <p><strong>Lomonosov Moscow State University</strong><br>Bachelor in Management</p>
-    </div>
+  <h2><b>TECHNICAL SKILLS</b></h2>
+  <p><b>Support & CRM:</b> Intercom, Slack, Notion, Asana, Discord, CRM (AMO, BEST)</p>
+  <p><b>Software:</b> MS Office (VBA/Macros), Google Workspace, Wix, WordPress</p>
+  <p><b>Media:</b> Video Editing (Premiere Pro, DaVinci Resolve), OBS Studio, Ableton</p>
+  <p><b>Languages:</b> English (C2), Russian (Native)</p>
+
+  <hr>
+
+  <h2><b>EXPERIENCE</b></h2>
+
+  <p><b>vidIQ Inc.</b> | <b>Creator Support Specialist</b> | 2022 – Present</p>
+  <ul>
+    <li>Resolve technical issues for YouTube creators via chat and email</li>
+    <li>Manage bug reporting and affiliate support for vidIQ and TikTok apps</li>
+    <li>Developed internal Notion guides to streamline troubleshooting and onboarding</li>
+  </ul>
+
+  <p><b>Boeing Aviation Training</b> | <b>Support Administrator</b> | 2020 – 2021</p>
+  <ul>
+    <li>Digitized 80% of paper databases to improve accessibility</li>
+    <li>Optimized Excel workflows using VBA macros</li>
+    <li>Managed pilot scheduling and IT support within internal CRM</li>
+  </ul>
+
+  <p><b>Boeing Russia Inc.</b> | <b>Administrative Assistant</b> | 2018 – 2020</p>
+  <ul>
+    <li>Managed a team of 15 administrators</li>
+    <li>Oversaw department budgets and contractors</li>
+    <li>Created a task-distribution manual to improve performance</li>
+  </ul>
+
+  <p><b>Avanda Corporation</b> | <b>Consultant</b> | 2017</p>
+  <ul>
+    <li>Performed market analysis</li>
+    <li>Designed web and branding assets using Wix for Japanese clients</li>
+  </ul>
+
+  <hr>
+
+  <h2><b>EDUCATION</b></h2>
+  <ul>
+    <li><b>Lomonosov Moscow State University</b> – Bachelor in Management</li>
+    <li><b>Waseda University Tokyo</b> – School of Commerce (Exchange Program)</li>
+    <li><b>The New York Film Academy</b> – Filmmaking Certificate</li>
+  </ul>
+
+  <hr>
+
+  <h2><b>ACHIEVEMENTS</b></h2>
+  <ul>
+    <li>Boeing Recognition Program – Exceptional Performance Award (2021)</li>
+    <li>Unilever & LMSU BS – Best Presentation Skills Award</li>
+    <li>Volunteer – Green Legacy Hiroshima (Environmental Awareness & Education)</li>
+  </ul>
 
 </body>
 </html>
