--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <style>
     body {
-      background-color: black;
-      color: white;
+      background-color: white;
+      color: black;
       font-family: Arial, Helvetica, sans-serif;
       margin: 30px;
       line-height: 1.5;
@@ -37,7 +37,7 @@
     }
 
     a {
-      color: white;
+      color: black;
       text-decoration: underline;
     }
 
