--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Resume of Victoria Gurova">
   <title>Victoria Gurova - Resume</title>
 
   <style>
     body {
-      background-color: white;
+      background: white;
       color: black;
       font-family: Arial, Helvetica, sans-serif;
-      margin: 30px;
+      margin: 40px;
       line-height: 1.5;
     }
 
@@ -17,23 +19,26 @@
       font-weight: bold;
     }
 
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin-top: 24px;
+    }
+
     p {
       margin: 6px 0;
     }
 
     ul {
-      margin-top: 6px;
-      margin-bottom: 14px;
+      margin: 6px 0 14px 20px;
     }
 
     li {
       margin-bottom: 4px;
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid white;
-      margin: 20px 0;
     }
 
     a {
@@ -55,54 +60,44 @@
     <a href="mailto:victoria.p.gurova@gmail.com">victoria.p.gurova@gmail.com</a>
   </p>
 
-  <hr>
-
   <h2><b>SUMMARY</b></h2>
   <p>
     Solutions-oriented Support Specialist with a background in digital collaboration and administrative optimization.
     Expert in assisting stakeholders at global companies like vidIQ and Boeing through creative problem-solving and technical proficiency.
   </p>
 
-  <hr>
-
   <h2><b>TECHNICAL SKILLS</b></h2>
-  <p><b>Support & CRM:</b> Intercom, Slack, Notion, Asana, Discord, CRM (AMO, BEST)</p>
-  <p><b>Software:</b> MS Office (VBA/Macros), Google Workspace, Wix, WordPress</p>
-  <p><b>Media:</b> Video Editing (Premiere Pro, DaVinci Resolve), OBS Studio, Ableton</p>
-  <p><b>Languages:</b> English (C2), Russian (Native)</p>
-
-  <hr>
+  <p><b>Support &amp; CRM:</b> Intercom, Slack, Notion, Asana, Discord, CRM (AMO, BEST).</p>
+  <p><b>Software:</b> MS Office (VBA/Macros), Google Workspace, Wix, WordPress.</p>
+  <p><b>Media:</b> Video Editing (Premiere Pro, DaVinci Resolve), OBS Studio, Ableton.</p>
+  <p><b>Languages:</b> English (C2), Russian (Native).</p>
 
   <h2><b>EXPERIENCE</b></h2>
 
   <p><b>vidIQ Inc.</b> | <b>Creator Support Specialist</b> | 2022 – Present</p>
   <ul>
-    <li>Resolve technical issues for YouTube creators via chat and email</li>
-    <li>Manage bug reporting and affiliate support for vidIQ and TikTok apps</li>
-    <li>Developed internal Notion guides to streamline troubleshooting and onboarding</li>
+    <li>Resolve technical issues for YouTube creators via chat and email.</li>
+    <li>Manage bug reporting and affiliate support for vidIQ and TikTok apps.</li>
+    <li>Developed internal Notion guides to streamline team troubleshooting and onboarding.</li>
   </ul>
 
   <p><b>Boeing Aviation Training</b> | <b>Support Administrator</b> | 2020 – 2021</p>
   <ul>
-    <li>Digitized 80% of paper databases to improve accessibility</li>
-    <li>Optimized Excel workflows using VBA macros</li>
-    <li>Managed pilot scheduling and IT support within internal CRM</li>
+    <li>Digitized 80% of paper databases to improve data accessibility and searchability.</li>
+    <li>Optimized Excel workflows using VBA macros to increase department efficiency.</li>
+    <li>Managed pilot scheduling and IT support within Boeing’s internal CRM.</li>
   </ul>
 
   <p><b>Boeing Russia Inc.</b> | <b>Administrative Assistant</b> | 2018 – 2020</p>
   <ul>
-    <li>Managed a team of 15 administrators</li>
-    <li>Oversaw department budgets and contractors</li>
-    <li>Created a task-distribution manual to improve performance</li>
+    <li>Managed a team of 15 administrators and oversaw department budgets and contractors.</li>
+    <li>Created a task-distribution manual that significantly improved team performance.</li>
   </ul>
 
   <p><b>Avanda Corporation</b> | <b>Consultant</b> | 2017</p>
   <ul>
-    <li>Performed market analysis</li>
-    <li>Designed web and branding assets using Wix for Japanese clients</li>
+    <li>Performed market analysis and designed web and branding assets (Wix) for Japanese clients.</li>
   </ul>
-
-  <hr>
 
   <h2><b>EDUCATION</b></h2>
   <ul>
@@ -111,13 +106,11 @@
     <li><b>The New York Film Academy</b> – Filmmaking Certificate</li>
   </ul>
 
-  <hr>
-
   <h2><b>ACHIEVEMENTS</b></h2>
   <ul>
     <li>Boeing Recognition Program – Exceptional Performance Award (2021)</li>
-    <li>Unilever & LMSU BS – Best Presentation Skills Award</li>
-    <li>Volunteer – Green Legacy Hiroshima (Environmental Awareness & Education)</li>
+    <li>Unilever &amp; LMSU BS – Best Presentation Skills Award</li>
+    <li>Volunteer – Green Legacy Hiroshima (Environmental Awareness &amp; Education)</li>
   </ul>
 
 </body>
