--- a/index.html
+++ b/index.html
@@ -12,33 +12,37 @@
       color: black;
       font-family: Arial, Helvetica, sans-serif;
       margin: 40px;
-      line-height: 1.5;
+      line-height: 1.4;
     }
 
-    h1, h2 {
-      font-weight: bold;
+    h1, h2, p, ul, li {
+      margin: 0;
+      padding: 0;
+      font-weight: normal;
     }
 
     h1 {
       font-size: 32px;
-      margin-bottom: 10px;
+      font-weight: bold;
     }
 
     h2 {
-      font-size: 18px;
-      margin-top: 24px;
+      font-size: 16px;
+      font-weight: bold;
+      margin-top: 14px;
     }
 
     p {
-      margin: 6px 0;
+      margin-top: 4px;
     }
 
     ul {
-      margin: 6px 0 14px 20px;
+      list-style-type: disc;
+      margin-left: 18px;
     }
 
     li {
-      margin-bottom: 4px;
+      margin-top: 2px;
     }
 
     a {
@@ -54,59 +58,57 @@
 
 <body>
 
-  <h1><b>Victoria Gurova</b></h1>
-  <p class="small">
-    <b>Email:</b>
-    <a href="mailto:victoria.p.gurova@gmail.com">victoria.p.gurova@gmail.com</a>
-  </p>
+  <h1>Victoria Gurova</h1>
+  <p class="small">Email: <a href="mailto:victoria.p.gurova@gmail.com">victoria.p.gurova@gmail.com</a></p>
 
-  <h2><b>SUMMARY</b></h2>
+  <h2>SUMMARY</h2>
   <p>
     Solutions-oriented Support Specialist with a background in digital collaboration and administrative optimization.
     Expert in assisting stakeholders at global companies like vidIQ and Boeing through creative problem-solving and technical proficiency.
   </p>
 
-  <h2><b>TECHNICAL SKILLS</b></h2>
-  <p><b>Support &amp; CRM:</b> Intercom, Slack, Notion, Asana, Discord, CRM (AMO, BEST).</p>
-  <p><b>Software:</b> MS Office (VBA/Macros), Google Workspace, Wix, WordPress.</p>
-  <p><b>Media:</b> Video Editing (Premiere Pro, DaVinci Resolve), OBS Studio, Ableton.</p>
-  <p><b>Languages:</b> English (C2), Russian (Native).</p>
+  <h2>TECHNICAL SKILLS</h2>
+  <p>Support &amp; CRM: Intercom, Slack, Notion, Asana, Discord, CRM (AMO, BEST).</p>
+  <p>Software: MS Office (VBA/Macros), Google Workspace, Wix, WordPress.</p>
+  <p>Media: Video Editing (Premiere Pro, DaVinci Resolve), OBS Studio, Ableton.</p>
+  <p>Languages: English (C2), Russian (Native).</p>
 
-  <h2><b>EXPERIENCE</b></h2>
+  <h2>EXPERIENCE</h2>
 
-  <p><b>vidIQ Inc.</b> | <b>Creator Support Specialist</b> | 2022 – Present</p>
+  <p><b>vidIQ Inc.</b> | Creator Support Specialist | 2022 – Present</p>
   <ul>
-    <li>Resolve technical issues for YouTube creators via chat and email.</li>
-    <li>Manage bug reporting and affiliate support for vidIQ and TikTok apps.</li>
-    <li>Developed internal Notion guides to streamline team troubleshooting and onboarding.</li>
+    <li>Resolve technical issues for YouTube creators via chat and email</li>
+    <li>Manage bug reporting and affiliate support for vidIQ and TikTok apps</li>
+    <li>Developed internal Notion guides to streamline team troubleshooting and onboarding</li>
   </ul>
 
-  <p><b>Boeing Aviation Training</b> | <b>Support Administrator</b> | 2020 – 2021</p>
+  <p><b>Boeing Aviation Training</b> | Support Administrator | 2020 – 2021</p>
   <ul>
-    <li>Digitized 80% of paper databases to improve data accessibility and searchability.</li>
-    <li>Optimized Excel workflows using VBA macros to increase department efficiency.</li>
-    <li>Managed pilot scheduling and IT support within Boeing’s internal CRM.</li>
+    <li>Digitized 80% of paper databases to improve data accessibility and searchability</li>
+    <li>Optimized Excel workflows using VBA macros to increase department efficiency</li>
+    <li>Managed pilot scheduling and IT support within Boeing’s internal CRM</li>
   </ul>
 
-  <p><b>Boeing Russia Inc.</b> | <b>Administrative Assistant</b> | 2018 – 2020</p>
+  <p><b>Boeing Russia Inc.</b> | Administrative Assistant | 2018 – 2020</p>
   <ul>
-    <li>Managed a team of 15 administrators and oversaw department budgets and contractors.</li>
-    <li>Created a task-distribution manual that significantly improved team performance.</li>
+    <li>Managed a team of 15 administrators and oversaw department budgets and contractors</li>
+    <li>Created a task-distribution manual that significantly improved team performance</li>
   </ul>
 
-  <p><b>Avanda Corporation</b> | <b>Consultant</b> | 2017</p>
+  <p><b>Avanda Corporation</b> | Consultant | 2017</p>
   <ul>
-    <li>Performed market analysis and designed web and branding assets (Wix) for Japanese clients.</li>
+    <li>Performed market analysis</li>
+    <li>Designed web and branding assets (Wix) for Japanese clients</li>
   </ul>
 
-  <h2><b>EDUCATION</b></h2>
+  <h2>EDUCATION</h2>
   <ul>
-    <li><b>Lomonosov Moscow State University</b> – Bachelor in Management</li>
-    <li><b>Waseda University Tokyo</b> – School of Commerce (Exchange Program)</li>
-    <li><b>The New York Film Academy</b> – Filmmaking Certificate</li>
+    <li>Lomonosov Moscow State University – Bachelor in Management</li>
+    <li>Waseda University Tokyo – School of Commerce (Exchange Program)</li>
+    <li>The New York Film Academy – Filmmaking Certificate</li>
   </ul>
 
-  <h2><b>ACHIEVEMENTS</b></h2>
+  <h2>ACHIEVEMENTS</h2>
   <ul>
     <li>Boeing Recognition Program – Exceptional Performance Award (2021)</li>
     <li>Unilever &amp; LMSU BS – Best Presentation Skills Award</li>
