--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Resume of Victoria Gurova">
-  <title>Victoria Gurova - Resume</title>
+  <meta name="description" content="CV of Victoria Gurova">
+  <title>Victoria Gurova - CV</title>
 
   <style>
     body {
@@ -15,15 +15,13 @@
       line-height: 1.4;
     }
 
-    h1, h2, p, ul, li {
-      margin: 0;
-      padding: 0;
-      font-weight: normal;
-    }
-
-    h1 {
+    #name {
       font-size: 32px;
       font-weight: bold;
+    }
+
+    .small {
+      font-size: 14px;
     }
 
     h2 {
@@ -32,34 +30,31 @@
       margin-top: 14px;
     }
 
-    p {
-      margin-top: 4px;
+    p, ul {
+      margin: 4px 0;
     }
 
     ul {
-      list-style-type: disc;
       margin-left: 18px;
     }
 
     li {
-      margin-top: 2px;
+      margin: 2px 0;
     }
 
     a {
       color: black;
       text-decoration: underline;
     }
-
-    .small {
-      font-size: 14px;
-    }
   </style>
 </head>
 
 <body>
 
-  <h1>Victoria Gurova</h1>
-  <p class="small">Email: <a href="mailto:victoria.p.gurova@gmail.com">victoria.p.gurova@gmail.com</a></p>
+  <h1 id="name">Victoria Gurova</h1>
+  <p class="small">
+    Email: <a href="mailto:victoria.p.gurova@gmail.com">victoria.p.gurova@gmail.com</a>
+  </p>
 
   <h2>SUMMARY</h2>
   <p>
@@ -79,7 +74,7 @@
   <ul>
     <li>Resolve technical issues for YouTube creators via chat and email</li>
     <li>Manage bug reporting and affiliate support for vidIQ and TikTok apps</li>
-    <li>Developed internal Notion guides to streamline team troubleshooting and onboarding</li>
+    <li>Developed internal Notion guides to streamline troubleshooting and onboarding</li>
   </ul>
 
   <p><b>Boeing Aviation Training</b> | Support Administrator | 2020 – 2021</p>
@@ -98,7 +93,7 @@
   <p><b>Avanda Corporation</b> | Consultant | 2017</p>
   <ul>
     <li>Performed market analysis</li>
-    <li>Designed web and branding assets (Wix) for Japanese clients</li>
+    <li>Designed web and branding assets using Wix for Japanese clients</li>
   </ul>
 
   <h2>EDUCATION</h2>
